--- a/overlay/frameworks/base/core/res/res/values/strings.xml
+++ b/overlay/frameworks/base/core/res/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-/* //device/apps/common/assets/res/any/dimens.xml
-**
-** Copyright 2006, The Android Open Source Project
+/*
+** Copyright 2017, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -17,7 +16,10 @@
 ** limitations under the License.
 */
 -->
-<resources>
-    <!-- Default radius of the software rounded corners. -->
-    <dimen name="rounded_corner_radius">24dp</dimen>
+
+<!-- These resources are around just to allow their values to be customized
+     for different hardware and product builds.  Do not translate. -->
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Do not translate. Default access point SSID used for tethering -->
+    <string name="wifi_tether_configure_ssid_default" translatable="false">Xiaomi Mi 8 Lite</string>
 </resources>
